--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 { 
   "name": "appsngen-dev-box",
     "description": "Tool for appsngen widgets development.",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "private": false,
     "dependencies": {
         "grunt": "~0.4.5",
@@ -14,7 +14,8 @@
         "body-parser": "1.6.5",
         "bower" : "1.3.9",
         "grunt-bower-task" : "0.4.0",
-        "method-override" : "2.1.3"
+        "method-override" : "2.1.3",
+        "portscanner" : "1.0.0"
     },
     "repository": {
         "type": "git",
