fixed viewer naming

--- a/serverConfig.json
+++ b/serverConfig.json
@@ -1,6 +1,6 @@
 {
     "viewerPort" : "8889",
-    "viwerHost" : "localhost",
+    "viewerHost" : "localhost",
     "devBoxPort" : "8879",
     "devBoxHost" : "localhost",
     "widgetsPath" : "/../widgetslist.json"
