applied new features for new version of viewer module.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .idea
-/js/dependencies
+/views/js/dependencies
 /node_modules
-logs.txt
-cache.json
+/logs
+/views/cache.json
 config.json
 /.out/jshint
