--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 { 
   "name": "appsngen-dev-box",
     "description": "Tool for appsngen widgets development.",
-    "version": "1.0.9",
+    "version": "2.0.0",
     "private": false,
     "dependencies": {
         "grunt": "~0.4.5",
@@ -15,7 +15,11 @@
         "bower" : "1.3.9",
         "grunt-bower-task" : "0.4.0",
         "method-override" : "2.1.3",
-        "portscanner" : "1.0.0"
+        "portscanner" : "1.0.0",
+        "compression": "1.4.0",
+        "consolidate": "0.10.0",
+        "underscore" : "1.6.0",
+        "guid" : "0.0.12"
     },
     "repository": {
         "type": "git",
