add dev box auto login;

--- a/serverConfig.json
+++ b/serverConfig.json
@@ -28,7 +28,7 @@
             "error": 5
         }
     }, "user": {
-    "userId": "",
+    "name": "",
     "password": "",
     "organizationId": ""
 }}
