--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "appsngen-dev-box",
     "description": "Tool for appsngen widgets development.",
-    "version": "2.0.5",
+    "version": "2.0.6",
     "private": false,
     "dependencies": {
+        "appsngen-viewer": "2.0.4",
         "grunt": "~0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-contrib-jshint": "0.10.0",
@@ -19,7 +20,8 @@
         "compression": "1.4.0",
         "consolidate": "0.10.0",
         "underscore": "1.6.0",
-        "guid": "0.0.12"
+        "guid": "0.0.12",
+        "comment-json": "0.1.11"
     },
     "repository": {
         "type": "git",
