--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "price-chart",
+    "name": "dev-box",
     "version": "0.1.0",
     "dependencies": {
         "bootstrap-css" : "3.2.0",
@@ -9,6 +9,7 @@
         "jquery": "1.11.1",
         "underscore": "~1.4.2",
         "html5shiv": "~3.7.0",
-        "jquery-ui" : "1.11.1"
+        "jquery-ui" : "1.11.1",
+        "requirejs": "2.1.16"
     }
 }
