--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "Tool for appsngen widgets development.",
     "version": "2.0.10",
     "private": false,
+    "main": "server.js",
     "dependencies": {
         "appsngen-viewer": "2.0.6",
         "grunt": "~0.4.5",
