--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "appsngen-dev-box",
     "description": "Tool for appsngen widgets development.",
-    "version": "2.0.11",
+    "version": "2.0.12",
     "private": false,
     "main": "server.js",
     "dependencies": {
         "appsngen-viewer": "2.0.7",
-        "grunt": "~0.4.5",
+        "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-contrib-jshint": "0.10.0",
         "mime": "1.2.11",
